--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -6539,10 +6539,27 @@ button.close {
 /*
  * Classes
  */
-.ellipsis {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+/* Responsive tables: No more tables. Needs JS to work! */
+.no-more-tables {
+  display: block;
+}
+.no-more-tables thead,
+.no-more-tables tbody,
+.no-more-tables th,
+.no-more-tables td,
+.no-more-tables tr {
+  display: block;
+}
+.no-more-tables thead {
+  display: none;
+}
+.no-more-tables tr {
+  border: 1px solid #ccc;
+}
+.no-more-tables td::before {
+  content: attr(data-td-title) ': ';
+  width: 50%;
+  font-weight: bold;
 }
 .space-top-small {
   margin-top: 10px;
@@ -6561,11 +6578,6 @@ button.close {
 }
 .space-bottom-huge {
   margin-bottom: 40px;
-}
-.form-group label {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 .form-group label[for] {
   cursor: pointer;
@@ -6608,11 +6620,32 @@ button.close {
   color: white;
 }
 /*
- * Elements
- */
-/*
  * Classes
  */
+/* Responsive tables: No more tables */
+@media (max-width: 480px) {
+  .table {
+    display: block;
+  }
+  .table thead,
+  .table tbody,
+  .table th,
+  .table td,
+  .table tr {
+    display: block;
+  }
+  .table thead {
+    display: none;
+  }
+  .table tr {
+    border: 1px solid #ccc;
+  }
+  .table td::before {
+    content: attr(data-td-title) ': ';
+    width: 50%;
+    font-weight: bold;
+  }
+}
 h2.section {
   margin: 0px 0px 20px 0px;
   font-size: 14px;
@@ -6631,6 +6664,11 @@ h2.section {
   font-size: 12px;
 }
 /* Form */
+.form-group label {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .form-group label:after {
   /* content: ':'; */
 }
@@ -6694,6 +6732,14 @@ fieldset[disabled] .form-group textarea {
 textarea.form-group input,
 textarea.form-group select,
 textarea.form-group textarea {
+  height: auto;
+}
+.form-group input[type=checkbox] {
+  width: auto;
+  height: auto;
+  margin-left: 0px;
+}
+.form-group select[multiple] {
   height: auto;
 }
 .form-group textarea {
@@ -6838,7 +6884,9 @@ textarea.model-search-box input[type=text] {
   cursor: pointer;
 }
 /* Tags */
-/* .form-group .bootstrap-tagsinput { max-width: 40% } */
+.bootstrap-tagsinput input {
+  display: inline-block;
+}
 /* Infotext */
 /* .info-text { color: #999 } */
 /* Modale dialogue */
@@ -6880,6 +6928,7 @@ textarea.model-search-box input[type=text] {
   color: #333333;
   background-color: #ffffff;
   border-color: #cccccc;
+  margin-left: 5px;
 }
 .modal .modal-footer button:focus,
 .modal .modal-footer button:active:focus,
@@ -6954,6 +7003,10 @@ fieldset[disabled] .modal .modal-footer button.active {
   color: #ffffff;
   background-color: #333333;
 }
+/* Alert */
+.alert {
+  border-radius: 0px;
+}
 /*
  * Subpages
  */
@@ -7004,8 +7057,8 @@ fieldset[disabled] .modal .modal-footer button.active {
   cursor: pointer;
 }
 .page-dashboard #chart {
-  margin: 0px 0px 20px 5%;
-  width: 90%;
+  margin-bottom: 20px;
+  width: 100%;
   height: 250px;
 }
 .page-dashboard .quick-access {
@@ -7045,8 +7098,8 @@ fieldset[disabled] .modal .modal-footer button.active {
 }
 .page-dashboard .widgets-row td {
   overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .page-dashboard .widgets-row th:first-child {
   width: 70%;
@@ -7064,11 +7117,33 @@ fieldset[disabled] .modal .modal-footer button.active {
 }
 .page-dashboard .feed-messages td {
   overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .page-dashboard .feed-messages img {
   vertical-align: text-bottom;
+}
+@media (max-width: 480px) {
+  .page-dashboard .quick-access div {
+    width: 33%;
+    padding: 10px 0px;
+  }
+  .page-dashboard .quick-access a {
+    margin: 0px 5px;
+  }
+  .page-dashboard .quick-access i {
+    font-size: 30px;
+  }
+  .page-dashboard #chart .flot-text {
+    display: none;
+  }
+  .page-dashboard .widgets-row div {
+    width: auto;
+    float: none;
+  }
+  .page-dashboard .feed-messages td {
+    white-space: normal;
+  }
 }
 .page-navigations #items-table th.urls {
   width: 50%;
@@ -7148,7 +7223,7 @@ textarea.editor-images .actions input {
   height: auto;
 }
 .editor-images .actions button {
-  width: 20%;
+  width: 27%;
   box-sizing: border-box;
 }
 .editor-images .images {
@@ -7206,42 +7281,69 @@ img {
   margin: 0px;
 }
 header {
+  position: fixed;
+  z-index: 100;
+  left: 0px;
+  right: 0px;
   background-color: #139cdc;
   color: #ffffff;
   font-size: 16px;
   line-height: 56px;
-  position: fixed;
-  left: 0px;
-  right: 0px;
-  z-index: 100;
+  box-shadow: rgba(0, 0, 0, 0.33) 0px 1px 3px 0px;
 }
-header .msg a {
+header a {
+  color: #ffffff;
+}
+header a:hover {
   color: #ffffff;
 }
 header nav {
   float: right;
 }
-header nav ul {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
-header nav ul li {
+header nav li {
   float: left;
-  width: auto;
 }
-header nav ul li a {
-  padding: 0px 20px 0px 20px;
-  color: #ffffff;
+header nav li a {
+  display: inline-block;
+  padding: 0px 20px;
+  height: 56px;
 }
-header nav ul li:hover {
+header nav li:hover {
   background-color: #0a8cc9;
 }
-header nav ul li:hover a {
-  color: #ffffff;
+header .msg {
+  display: inline-block;
+  margin-left: 40px;
 }
 header .header-logo {
-  padding-left: 0px;
+  width: 250px;
+  float: left;
+}
+@media (max-width: 480px) {
+  header {
+    position: relative;
+  }
+  header .header-logo {
+    width: auto;
+    float: none;
+    text-align: center;
+  }
+  header .msg {
+    display: none;
+  }
+  header nav {
+    float: none;
+  }
+  header nav li {
+    width: 33%;
+    padding: 0px !important;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  header nav li a {
+    padding: 0px 10px;
+  }
 }
 #sidebar {
   background-color: #1a1f23;
@@ -7289,18 +7391,18 @@ header .header-logo {
   background-color: #1e2429;
   color: #ffffff;
   text-transform: uppercase;
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
 }
 #sidebar .navigation .category .items {
   height: 0px;
   overflow: hidden;
 }
 #sidebar .navigation .category .items a {
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
   display: block;
   padding: 10px 20px;
   color: #728797;
@@ -7322,9 +7424,26 @@ header .header-logo {
 #sidebar .navigation .category.active .items {
   height: auto;
 }
+@media (max-width: 480px) {
+  #sidebar {
+    position: relative;
+    width: 100%;
+    height: auto !important;
+    margin-top: 0px;
+  }
+  #sidebar .account {
+    display: none;
+  }
+}
 #content {
-  margin: 0px 0px 0px 250px;
+  margin-left: 250px;
   padding-top: 56px;
+}
+@media (max-width: 480px) {
+  #content {
+    margin-left: 0px;
+    padding-top: 0px;
+  }
 }
 .page {
   max-width: 900px;
@@ -7342,6 +7461,14 @@ header .header-logo {
   border-radius: 3px;
   background-color: #139cdc;
   color: #ffffff;
+}
+@media (max-width: 480px) {
+  .page {
+    margin: 0px 20px;
+  }
+  .page-head {
+    padding-left: 20px;
+  }
 }
 #footer {
   margin-top: 40px;
